--- a/public/popup.html
+++ b/public/popup.html
@@ -1,88 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Open Dialer</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Opening Dialer...</title>
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
     body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      background: #ffffff;
+      min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 100vh;
-      margin: 0;
-      background: #f2f2f7;
     }
-    .card {
-      background: white;
-      padding: 18px;
-      border-radius: 14px;
-      box-shadow: 0 10px 30px rgba(0,0,0,.12);
-      width: 320px;
+    .fallback {
+      display: none;
       text-align: center;
+      padding: 40px 20px;
     }
-    button {
-      width: 100%;
-      border: none;
-      border-radius: 12px;
-      padding: 14px 16px;
-      font-size: 16px;
+    .fallback.show {
+      display: block;
+    }
+    .fallback h1 {
+      font-size: 20px;
+      color: #1c1c1e;
+      margin-bottom: 12px;
       font-weight: 600;
+    }
+    .fallback p {
+      font-size: 14px;
+      color: #8e8e93;
+      margin-bottom: 24px;
+      line-height: 1.5;
+    }
+    .fallback button {
+      padding: 12px 32px;
       background: #34c759;
       color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 15px;
+      font-weight: 600;
       cursor: pointer;
+      box-shadow: 0 2px 8px rgba(52, 199, 89, 0.3);
     }
-    .hint {
-      margin-top: 10px;
-      font-size: 12px;
-      color: #6b7280;
-      line-height: 1.4;
+    .fallback button:hover {
+      background: #30b350;
+    }
+    .fallback button:active {
+      transform: scale(0.98);
     }
   </style>
 </head>
 <body>
-  <div class="card">
-    <button id="open">Open Dialer</button>
-    <div class="hint">
-      If nothing happens, allow popups for Airtable / this site.
-    </div>
+  <div class="fallback" id="fallback">
+    <h1>Popup Blocked</h1>
+    <p>Please allow popups for this site, then click below:</p>
+    <button id="retryBtn">Open Dialer</button>
   </div>
 
   <script>
-    function qs(name) {
-      return new URLSearchParams(window.location.search).get(name) || "";
+    const params = new URLSearchParams(window.location.search);
+    const to = params.get('to');
+    const name = params.get('name') || 'Unknown Contact';
+
+    const dialerUrl = new URL(window.location.origin);
+    dialerUrl.searchParams.set('to', to);
+    dialerUrl.searchParams.set('name', name);
+    dialerUrl.searchParams.set('compact', '1');
+
+    const width = 360;
+    const height = 720;
+    const left = screen.availWidth - width - 30;
+    const top = 80;
+
+    const features = [
+      `width=${width}`,
+      `height=${height}`,
+      `left=${left}`,
+      `top=${top}`,
+      'resizable=yes',
+      'scrollbars=no',
+      'toolbar=no',
+      'menubar=no',
+      'location=no',
+      'status=no'
+    ].join(',');
+
+    let popupWindow = null;
+    let popupOpened = false;
+
+    function attemptOpen() {
+      try {
+        popupWindow = window.open(dialerUrl.toString(), 'TwilioDialer', features);
+        
+        if (popupWindow && !popupWindow.closed && typeof popupWindow.closed !== 'undefined') {
+          popupOpened = true;
+          popupWindow.focus();
+          
+          setTimeout(() => {
+            try {
+              window.close();
+            } catch (e) {
+              // Fallback if window.close() fails
+              document.body.innerHTML = '<div style="text-align:center;padding:40px;color:#8e8e93;font-size:14px;">You can close this tab now.</div>';
+            }
+          }, 250);
+        } else {
+          showFallback();
+        }
+      } catch (e) {
+        showFallback();
+      }
     }
 
-    const to = qs("to");
-    const name = qs("name");
-
-    document.getElementById("open").addEventListener("click", () => {
-      // Opens your dialer page in compact mode
-      const dialerUrl =
-        "/?to=" + encodeURIComponent(to) +
-        "&name=" + encodeURIComponent(name) +
-        "&compact=1";
-
-      // Popup size (adjust if you want)
-      const w = 360;
-      const h = 680;
-
-      const left = Math.max(0, Math.round((screen.width - w) / 2));
-      const top = Math.max(0, Math.round((screen.height - h) / 2));
-
-      const features =
-        `popup=yes,width=${w},height=${h},left=${left},top=${top},` +
-        `resizable=yes,scrollbars=no,toolbar=no,menubar=no,location=no,status=no`;
-
-      const win = window.open(dialerUrl, "QuantraDialer", features);
-
-      if (!win) {
-        alert("Popup blocked. Allow popups for this site, then try again.");
-        return;
+    function showFallback() {
+      if (!popupOpened) {
+        document.getElementById('fallback').classList.add('show');
       }
+    }
 
-      win.focus();
+    // Attempt 1: Immediate on load
+    requestAnimationFrame(() => {
+      attemptOpen();
+    });
+
+    // Attempt 2: After 300ms
+    setTimeout(() => {
+      if (!popupOpened) {
+        attemptOpen();
+      }
+    }, 300);
+
+    // Retry button
+    document.getElementById('retryBtn').addEventListener('click', () => {
+      attemptOpen();
     });
   </script>
 </body>
